fixed z-index for arrows

--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -19,7 +19,7 @@
   cursor: pointer;
   font-weight: bold;
   font-size: 20px;
-  z-index: 1;
+  z-index: 0;
 }
 
 .next {
